<resources>
    <string name="app_name">My Calculator</string>
    <string name="cal_text" />
    <string name="nine">9</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="Divide">/</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="minus">-</string>
    <string name="Zero">0</string>
    <string name="clr">CLR</string>
    <string name="Plus">+</string>
    <string name="Equal">=</string>
</resources>