<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtCalc_text"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/black"
        android:padding="10dp"
        android:text="@string/cal_text"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:gravity="end|bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CE595050"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
android:onClick="onDigti"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"

            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight"
            android:onClick="onDigti"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigti"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Divide"
            android:onClick="onClear"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#A92E2929"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Four"
            android:textColor="@color/white"
            android:onClick="onDigti"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigti"
            android:text="@string/Five"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigti"
            android:text="@string/Six"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="*"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#A92E2929"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigti"
            android:text="@string/One"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Two"
            android:onClick="onDigti"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Three"
            android:onClick="onDigti"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:onClick="onClear"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#A92E2929"
        android:layout_weight="1">

        <Button

            android:id="@+id/btnDot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="onDecimalpoint"
            android:text="."
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />

        <Button

            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Zero"
            android:onClick="onDigti"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button

            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            android:onClick="onClear"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:onClick="onClear"
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Plus"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#A92E2929"
        android:layout_weight="1">
    <Button
        android:onClick="onClear"
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/Equal"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        style="?android:attr/buttonBarButtonStyle"
        tools:targetApi="lollipop"
        tools:ignore="NestedWeights" />
    </LinearLayout>
</LinearLayout>